// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProposalPageAside /> should render correctly 1`] = `
<ProposalPageAside__Aside
  hasVoteBar={false}
  id="ProposalPageAside"
  isAnalysing={false}
  isFixedToBottom={false}
  isFixedToTop={false}
  isMovingUp={false}
  isTipsmeee={false}
>
  <div>
    <Relay(ProposalPageMetadata)
      proposal={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "currentVotableStep": Object {
            "$fragmentRefs": null,
            "voteType": "SIMPLE",
            "votesRanking": true,
          },
          "form": Object {
            "usingCategories": true,
            "usingThemes": false,
            "usingTipsmeee": false,
          },
          "tipsmeeeId": null,
        }
      }
      showCategories={true}
      showDistricts={false}
      showNullEstimation={false}
      showThemes={false}
    />
    <Relay(ProposalPageAdvancement)
      proposal={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "currentVotableStep": Object {
            "$fragmentRefs": null,
            "voteType": "SIMPLE",
            "votesRanking": true,
          },
          "form": Object {
            "usingCategories": true,
            "usingThemes": false,
            "usingTipsmeee": false,
          },
          "tipsmeeeId": null,
        }
      }
    />
    <Relay(injectIntl(ProposalPageVoteThreshold))
      proposal={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "currentVotableStep": Object {
            "$fragmentRefs": null,
            "voteType": "SIMPLE",
            "votesRanking": true,
          },
          "form": Object {
            "usingCategories": true,
            "usingThemes": false,
            "usingTipsmeee": false,
          },
          "tipsmeeeId": null,
        }
      }
      showPoints={true}
      step={
        Object {
          "$fragmentRefs": null,
          "voteType": "SIMPLE",
          "votesRanking": true,
        }
      }
    />
  </div>
</ProposalPageAside__Aside>
`;

exports[`<ProposalPageAside /> should render correctly with analysis 1`] = `
<ProposalPageAside__Aside
  hasVoteBar={true}
  id="ProposalPageAside"
  isAnalysing={true}
  isFixedToBottom={false}
  isFixedToTop={false}
  isMovingUp={false}
  isTipsmeee={false}
>
  <div>
    <Relay(ProposalPageMetadata)
      proposal={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "currentVotableStep": Object {
            "$fragmentRefs": null,
            "voteType": "SIMPLE",
            "votesRanking": true,
          },
          "form": Object {
            "usingCategories": true,
            "usingThemes": false,
            "usingTipsmeee": false,
          },
          "tipsmeeeId": null,
        }
      }
      showCategories={true}
      showDistricts={false}
      showNullEstimation={false}
      showThemes={false}
    />
    <Relay(ProposalPageAdvancement)
      proposal={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "currentVotableStep": Object {
            "$fragmentRefs": null,
            "voteType": "SIMPLE",
            "votesRanking": true,
          },
          "form": Object {
            "usingCategories": true,
            "usingThemes": false,
            "usingTipsmeee": false,
          },
          "tipsmeeeId": null,
        }
      }
    />
    <Relay(injectIntl(ProposalPageVoteThreshold))
      proposal={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "currentVotableStep": Object {
            "$fragmentRefs": null,
            "voteType": "SIMPLE",
            "votesRanking": true,
          },
          "form": Object {
            "usingCategories": true,
            "usingThemes": false,
            "usingTipsmeee": false,
          },
          "tipsmeeeId": null,
        }
      }
      showPoints={true}
      step={
        Object {
          "$fragmentRefs": null,
          "voteType": "SIMPLE",
          "votesRanking": true,
        }
      }
    />
  </div>
</ProposalPageAside__Aside>
`;

exports[`<ProposalPageAside /> should render correctly with tipsmeee 1`] = `
<ProposalPageAside__Aside
  hasVoteBar={true}
  id="ProposalPageAside"
  isAnalysing={true}
  isFixedToBottom={false}
  isFixedToTop={false}
  isMovingUp={false}
  isTipsmeee={true}
>
  <div>
    <Relay(ProposalPageMetadata)
      proposal={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "currentVotableStep": Object {
            "$fragmentRefs": null,
            "voteType": "SIMPLE",
            "votesRanking": true,
          },
          "form": Object {
            "usingCategories": true,
            "usingThemes": true,
            "usingTipsmeee": true,
          },
          "tipsmeeeId": "aTipsmeCode",
        }
      }
      showCategories={true}
      showDistricts={false}
      showNullEstimation={false}
      showThemes={false}
    />
    <Relay(ProposalPageAdvancement)
      proposal={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "currentVotableStep": Object {
            "$fragmentRefs": null,
            "voteType": "SIMPLE",
            "votesRanking": true,
          },
          "form": Object {
            "usingCategories": true,
            "usingThemes": true,
            "usingTipsmeee": true,
          },
          "tipsmeeeId": "aTipsmeCode",
        }
      }
    />
    <ProposalTipsMeeeAside
      proposal={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "currentVotableStep": Object {
            "$fragmentRefs": null,
            "voteType": "SIMPLE",
            "votesRanking": true,
          },
          "form": Object {
            "usingCategories": true,
            "usingThemes": true,
            "usingTipsmeee": true,
          },
          "tipsmeeeId": "aTipsmeCode",
        }
      }
    />
    <Relay(injectIntl(ProposalPageVoteThreshold))
      proposal={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "currentVotableStep": Object {
            "$fragmentRefs": null,
            "voteType": "SIMPLE",
            "votesRanking": true,
          },
          "form": Object {
            "usingCategories": true,
            "usingThemes": true,
            "usingTipsmeee": true,
          },
          "tipsmeeeId": "aTipsmeCode",
        }
      }
      showPoints={true}
      step={
        Object {
          "$fragmentRefs": null,
          "voteType": "SIMPLE",
          "votesRanking": true,
        }
      }
    />
  </div>
</ProposalPageAside__Aside>
`;

exports[`<ProposalPageAside /> should render correctly with votableStep 1`] = `
<ProposalPageAside__Aside
  hasVoteBar={true}
  id="ProposalPageAside"
  isAnalysing={false}
  isFixedToBottom={false}
  isFixedToTop={false}
  isMovingUp={false}
  isTipsmeee={false}
>
  <div>
    <Relay(ProposalPageMetadata)
      proposal={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "currentVotableStep": Object {
            "$fragmentRefs": null,
            "voteType": "SIMPLE",
            "votesRanking": true,
          },
          "form": Object {
            "usingCategories": true,
            "usingThemes": false,
            "usingTipsmeee": false,
          },
          "tipsmeeeId": null,
        }
      }
      showCategories={true}
      showDistricts={false}
      showNullEstimation={false}
      showThemes={false}
    />
    <Relay(ProposalPageAdvancement)
      proposal={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "currentVotableStep": Object {
            "$fragmentRefs": null,
            "voteType": "SIMPLE",
            "votesRanking": true,
          },
          "form": Object {
            "usingCategories": true,
            "usingThemes": false,
            "usingTipsmeee": false,
          },
          "tipsmeeeId": null,
        }
      }
    />
    <Relay(injectIntl(ProposalPageVoteThreshold))
      proposal={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "currentVotableStep": Object {
            "$fragmentRefs": null,
            "voteType": "SIMPLE",
            "votesRanking": true,
          },
          "form": Object {
            "usingCategories": true,
            "usingThemes": false,
            "usingTipsmeee": false,
          },
          "tipsmeeeId": null,
        }
      }
      showPoints={true}
      step={
        Object {
          "$fragmentRefs": null,
          "voteType": "SIMPLE",
          "votesRanking": true,
        }
      }
    />
  </div>
</ProposalPageAside__Aside>
`;
